--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/storage": "2.1.3",
+    "@jiguang-ionic/jpush": "^1.0.2",
     "cordova-android": "7.0.0",
-    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-jcore": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ion2-calendar": "^2.1.7",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "jpush-phonegap-plugin": "^3.4.2",
     "moment": "^2.21.0",
     "rxjs": "5.5.7",
     "sw-toolbox": "3.6.0",
@@ -50,7 +53,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "jpush-phonegap-plugin": {
+        "APP_KEY": "27809c88c37cc54d00a4b203"
+      }
     },
     "platforms": [
       "android"
